--- a/src/main/resources/about.html
+++ b/src/main/resources/about.html
@@ -29,6 +29,9 @@
 <div>
     <div>3D Mesh Plugin: for segmenting cells in 3D.</div>
 	<div>Version <span id="VERSION">%%VERSION%%</span></div>
+	<div>
+		Current development is happening at <a href="https://github.com/Living-Technologies/DM3D">Living-Technologies/DM3D</a>
+	</div>
     <div>Documentation can be found at: <br/>
         <a href="https://github.com/PaluchLabUCL/DeformingMesh3D-plugin">https://github.com/PaluchLabUCL/DeformingMesh3D-plugin</a> <br/>
         <a href="https://github.com/FrancisCrickInstitute/ActiveUnetSegmentation">https://github.com/FrancisCrickInstitute/ActiveUnetSegmentation</a>
